[package]
name = "physics"
version = "0.1.0"
authors = ["Seymore-Bawts <seymore.bawts@proton.me>"]
edition = "2018"
[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.87"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them to the browser console.
console_error_panic_hook = { version = "0.1.7", optional = true }

# `wee_alloc` is a small allocator optimized for WASM.
wee_alloc = { version = "0.4.5", optional = true }

# Add dependencies for web APIs
[dependencies.web-sys]
version = "0.3.64"
features = [
  'console',
]

[dependencies.js-sys]
version = "0.3.64"

